@@ -1,172 +1,226 @@
 package com.workflow.service.job;
 
-import com.workflow.common.exception.customException.*;
-import com.workflow.dto.job.*;
-import com.workflow.entity.*;
-import com.workflow.repository.*;
-import lombok.RequiredArgsConstructor;
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.stream.Collectors;
+
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import java.util.*;
-import java.util.stream.Collectors;
+
+import com.workflow.common.exception.customException.ClientNotFoundException;
+import com.workflow.common.exception.customException.CompanyNotFoundException;
+import com.workflow.common.exception.customException.JobNotFoundException;
+import com.workflow.common.exception.customException.TemplateNotFoundException;
+import com.workflow.common.exception.customException.WorkerNotFoundException;
+import com.workflow.dto.job.JobCreateRequest;
+import com.workflow.dto.job.JobResponse;
+import com.workflow.dto.job.JobUpdateRequest;
+import com.workflow.entity.Client;
+import com.workflow.entity.Company;
+import com.workflow.entity.Job;
+import com.workflow.entity.JobFieldValue;
+import com.workflow.entity.JobTemplate;
+import com.workflow.entity.JobTemplateField;
+import com.workflow.entity.Worker;
+import com.workflow.repository.ClientRepository;
+import com.workflow.repository.CompanyRepository;
+import com.workflow.repository.JobFieldValueRepository;
+import com.workflow.repository.JobRepository;
+import com.workflow.repository.JobTemplateFieldRepository;
+import com.workflow.repository.JobTemplateRepository;
+import com.workflow.repository.WorkerRepository;
+import com.workflow.util.JsonUtil;
+
+import lombok.RequiredArgsConstructor;
 
 @Service
 @RequiredArgsConstructor
 @Transactional
 public class JobService implements IJobService {
 
-    private final JobRepository jobRepository;
-    private final JobFieldValueRepository fieldValueRepository;
-    private final JobTemplateRepository templateRepository;
-    private final JobTemplateFieldRepository templateFieldRepository;
-    private final CompanyRepository companyRepository;
-    private final ClientRepository clientRepository;
-    private final WorkerRepository workerRepository;
+        private final JobRepository jobRepository;
+        private final JobFieldValueRepository fieldValueRepository;
+        private final JobTemplateRepository templateRepository;
+        private final JobTemplateFieldRepository templateFieldRepository;
+        private final CompanyRepository companyRepository;
+        private final ClientRepository clientRepository;
+        private final WorkerRepository workerRepository;
 
-    @Override
-    public JobResponse createJob(JobCreateRequest request, Long companyId) {
-        Company company = companyRepository.findById(companyId)
-                .orElseThrow(() -> new CompanyNotFoundException("Company not found"));
+        @Override
+        public JobResponse createJob(JobCreateRequest request, Long companyId) {
+                Company company = companyRepository.findById(companyId)
+                                .orElseThrow(() -> new CompanyNotFoundException("Company not found"));
 
-        JobTemplate template = templateRepository.findById(request.getTemplateId())
-                .filter(t -> t.getCompany().getId().equals(companyId))
-                .orElseThrow(() -> new TemplateNotFoundException("Template not found"));
+                JobTemplate template = templateRepository.findById(request.getTemplateId())
+                                .filter(t -> t.getCompany().getId().equals(companyId))
+                                .orElseThrow(() -> new TemplateNotFoundException("Template not found"));
 
-        Client client = request.getClientId() == null ? null :
-                clientRepository.findById(request.getClientId())
-                        .filter(c -> c.getCompany().getId().equals(companyId))
-                        .orElseThrow(() -> new ClientNotFoundException("Client not found"));
+                Client client = request.getClientId() == null ? null
+                                : clientRepository.findById(request.getClientId())
+                                                .filter(c -> c.getCompany().getId().equals(companyId))
+                                                .orElseThrow(() -> new ClientNotFoundException("Client not found"));
 
-        Worker worker = request.getAssignedWorkerId() == null ? null :
-                workerRepository.findById(request.getAssignedWorkerId())
-                        .filter(w -> w.getCompany().getId().equals(companyId))
-                        .orElseThrow(() -> new WorkerNotFoundException("Worker not found"));
+                Worker worker = request.getAssignedWorkerId() == null ? null
+                                : workerRepository.findById(request.getAssignedWorkerId())
+                                                .filter(w -> w.getCompany().getId().equals(companyId))
+                                                .orElseThrow(() -> new WorkerNotFoundException("Worker not found"));
 
-        Job job = Job.builder()
-                .company(company)
-                .template(template)
-                .client(client)
-                .assignedWorker(worker)
-                .status(request.getStatus())
-                .archived(false)
-                .build();
-        jobRepository.save(job);
+                Job job = Job.builder()
+                                .company(company)
+                                .template(template)
+                                .client(client)
+                                .assignedWorker(worker)
+                                .status(request.getStatus())
+                                .archived(false)
+                                .build();
+                jobRepository.save(job);
 
-        saveJobFieldValues(job, request.getFieldValues());
+                saveJobFieldValues(job, request.getFieldValues());
 
-        return mapToResponse(job);
-    }
-
-    @Override
-    public JobResponse updateJob(Long jobId, JobUpdateRequest request, Long companyId) {
-        Job job = jobRepository.findById(jobId)
-                .filter(j -> j.getCompany().getId().equals(companyId))
-                .orElseThrow(() -> new JobNotFoundException("Job not found"));
-
-        if (request.getClientId() != null) {
-            Client client = clientRepository.findById(request.getClientId())
-                    .filter(c -> c.getCompany().getId().equals(companyId))
-                    .orElseThrow(() -> new ClientNotFoundException("Client not found"));
-            job.setClient(client);
+                return mapToResponse(job);
         }
 
-        if (request.getAssignedWorkerId() != null) {
-            Worker worker = workerRepository.findById(request.getAssignedWorkerId())
-                    .filter(w -> w.getCompany().getId().equals(companyId))
-                    .orElseThrow(() -> new WorkerNotFoundException("Worker not found"));
-            job.setAssignedWorker(worker);
+        @Override
+        public JobResponse updateJob(Long jobId, JobUpdateRequest request, Long companyId) {
+                Job job = jobRepository.findById(jobId)
+                                .filter(j -> j.getCompany().getId().equals(companyId))
+                                .orElseThrow(() -> new JobNotFoundException("Job not found"));
+
+                if (request.getClientId() != null) {
+                        Client client = clientRepository.findById(request.getClientId())
+                                        .filter(c -> c.getCompany().getId().equals(companyId))
+                                        .orElseThrow(() -> new ClientNotFoundException("Client not found"));
+                        job.setClient(client);
+                }
+
+                if (request.getAssignedWorkerId() != null) {
+                        Worker worker = workerRepository.findById(request.getAssignedWorkerId())
+                                        .filter(w -> w.getCompany().getId().equals(companyId))
+                                        .orElseThrow(() -> new WorkerNotFoundException("Worker not found"));
+                        job.setAssignedWorker(worker);
+                }
+
+                job.setStatus(request.getStatus());
+                job.setArchived(request.isArchived());
+                jobRepository.save(job);
+
+                fieldValueRepository.deleteByJobId(jobId);
+                saveJobFieldValues(job, request.getFieldValues());
+
+                return mapToResponse(job);
         }
 
-        job.setStatus(request.getStatus());
-        job.setArchived(request.isArchived());
-        jobRepository.save(job);
+        private void saveJobFieldValues(Job job, Map<Long, Object> fieldValues) {
+                if (fieldValues == null)
+                        return;
 
-        fieldValueRepository.deleteByJobId(jobId);
-        saveJobFieldValues(job, request.getFieldValues());
+                List<JobTemplateField> fields = templateFieldRepository
+                                .findByTemplateIdOrderByOrderIndexAsc(job.getTemplate().getId());
 
-        return mapToResponse(job);
-    }
+                List<JobFieldValue> values = fields.stream()
+                                .map(f -> {
+                                        Object val = fieldValues.get(f.getId());
+                                        if (val == null)
+                                                return null;
 
-    private void saveJobFieldValues(Job job, Map<Long, String> fieldValues) {
-        if (fieldValues == null) return;
+                                        JobFieldValue fieldValue = JobFieldValue.builder()
+                                                        .job(job)
+                                                        .field(f)
+                                                        .build();
 
-        List<JobTemplateField> fields = templateFieldRepository.findByTemplateIdOrderByOrderIndexAsc(
-                job.getTemplate().getId()
-        );
+                                        switch (f.getJobFieldType()) {
+                                                case TEXT, DROPDOWN -> fieldValue.setStringValue(val.toString());
+                                                case NUMBER ->
+                                                        fieldValue.setNumberValue(Double.valueOf(val.toString()));
+                                                case BOOLEAN ->
+                                                        fieldValue.setBooleanValue(Boolean.valueOf(val.toString()));
+                                                case DATE -> {
+                                                        if (val instanceof String s)
+                                                                fieldValue.setDateValue(LocalDateTime.parse(s));
+                                                        else if (val instanceof LocalDateTime dt)
+                                                                fieldValue.setDateValue(dt);
+                                                }
+                                                case JSON -> fieldValue.setJsonValue(JsonUtil.toJson(val));
+                                                case REFERENCE -> {
+                                                        // Expect Map with keys "id" and "type"
+                                                        if (val instanceof Map<?, ?> map) {
+                                                                fieldValue.setReferenceId(
+                                                                                Long.valueOf(map.get("id").toString()));
+                                                                fieldValue.setReferenceType(map.get("type").toString());
+                                                        }
+                                                }
+                                        }
 
-        List<JobFieldValue> values = fields.stream()
-        .map(f -> {
-                String val = fieldValues.get(f.getId());
-                return val != null ? JobFieldValue.builder()
-                        .job(job)
-                        .field(f)
-                        .value(val)
-                        .build() : null;
-        })
-        .filter(Objects::nonNull)
-        .collect(Collectors.toList());
+                                        return fieldValue;
+                                })
+                                .filter(Objects::nonNull)
+                                .toList();
 
-        fieldValueRepository.saveAll(values);
-    }
+                fieldValueRepository.saveAll(values);
+        }
 
-    @Override
-    public JobResponse getJob(Long jobId, Long companyId) {
-        Job job = jobRepository.findById(jobId)
-                .filter(j -> j.getCompany().getId().equals(companyId))
-                .orElseThrow(() -> new JobNotFoundException("Job not found"));
+        @Override
+        public JobResponse getJob(Long jobId, Long companyId) {
+                Job job = jobRepository.findById(jobId)
+                                .filter(j -> j.getCompany().getId().equals(companyId))
+                                .orElseThrow(() -> new JobNotFoundException("Job not found"));
 
-        return mapToResponse(job);
-    }
+                return mapToResponse(job);
+        }
 
-    @Override
-    public List<JobResponse> getAllJobs(Long companyId) {
-        return jobRepository.findByCompanyId(companyId)
-                .stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
+        @Override
+        public List<JobResponse> getAllJobs(Long companyId) {
+                return jobRepository.findByCompanyId(companyId)
+                                .stream()
+                                .map(this::mapToResponse)
+                                .collect(Collectors.toList());
+        }
 
-    @Override
-    public List<JobResponse> getJobsByTemplate(Long templateId, Long companyId) {
-        JobTemplate template = templateRepository.findById(templateId)
-                .filter(t -> t.getCompany().getId().equals(companyId))
-                .orElseThrow(() -> new TemplateNotFoundException("Template not found"));
+        @Override
+        public List<JobResponse> getJobsByTemplate(Long templateId, Long companyId) {
+                JobTemplate template = templateRepository.findById(templateId)
+                                .filter(t -> t.getCompany().getId().equals(companyId))
+                                .orElseThrow(() -> new TemplateNotFoundException("Template not found"));
 
-        return jobRepository.findByTemplateIdAndCompanyId(templateId, companyId)
-                .stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
+                return jobRepository.findByTemplateIdAndCompanyId(templateId, companyId)
+                                .stream()
+                                .map(this::mapToResponse)
+                                .collect(Collectors.toList());
+        }
 
-    @Override
-    public void deleteJob(Long jobId, Long companyId) {
-        Job job = jobRepository.findById(jobId)
-                .filter(j -> j.getCompany().getId().equals(companyId))
-                .orElseThrow(() -> new JobNotFoundException("Job not found"));
+        @Override
+        public void deleteJob(Long jobId, Long companyId) {
+                Job job = jobRepository.findById(jobId)
+                                .filter(j -> j.getCompany().getId().equals(companyId))
+                                .orElseThrow(() -> new JobNotFoundException("Job not found"));
 
-        fieldValueRepository.deleteByJobId(jobId);
-        jobRepository.delete(job);
-    }
+                fieldValueRepository.deleteByJobId(jobId);
+                jobRepository.delete(job);
+        }
 
-    private JobResponse mapToResponse(Job job) {
-        Map<Long, String> values = fieldValueRepository.findByJobId(job.getId())
-                .stream()
-                .collect(Collectors.toMap(
-                        v -> v.getField().getId(),
-                        JobFieldValue::getValue
-                ));
+        private JobResponse mapToResponse(Job job) {
+                Map<Long, Object> values = fieldValueRepository.findByJobId(job.getId())
+                                .stream()
+                                .collect(Collectors.toMap(
+                                                v -> v.getField().getId(),
+                                                JobFieldValue::getTypedValue // Use the new method
+                                ));
 
-        return JobResponse.builder()
-                .id(job.getId())
-                .companyId(job.getCompany().getId())
-                .templateId(job.getTemplate().getId())
-                .clientId(job.getClient() != null ? job.getClient().getId() : null)
-                .assignedWorkerId(job.getAssignedWorker() != null ? job.getAssignedWorker().getId() : null)
-                .status(job.getStatus())
-                .archived(job.isArchived())
-                .createdAt(job.getCreatedAt())
-                .updatedAt(job.getUpdatedAt())
-                .fieldValues(values)
-                .build();
-    }
+                return JobResponse.builder()
+                                .id(job.getId())
+                                .companyId(job.getCompany().getId())
+                                .templateId(job.getTemplate().getId())
+                                .clientId(job.getClient() != null ? job.getClient().getId() : null)
+                                .assignedWorkerId(job.getAssignedWorker() != null ? job.getAssignedWorker().getId()
+                                                : null)
+                                .status(job.getStatus())
+                                .archived(job.isArchived())
+                                .createdAt(job.getCreatedAt())
+                                .updatedAt(job.getUpdatedAt())
+                                .fieldValues(values) // Change JobResponse DTO fieldValues type to Map<Long, Object>
+                                .build();
+        }
+
 }
